<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <TableLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:shrinkColumns="1"
        android:stretchColumns="1" >
        <TableRow>
            <TextView android:text="@string/name_label" />
            <EditText android:id="@+id/name" android:inputType="text"/>
        </TableRow>
        <TableRow>
            <TextView android:text="@string/address_label" />
            <EditText android:id="@+id/addr" android:inputType="text"/>
        </TableRow>
        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type_label" />
            <RadioGroup
                android:id="@+id/types"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
                <RadioButton
                    android:id="@+id/takeout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/take_out_label" />
                <RadioButton
                    android:id="@+id/sitdown"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sit_down_label" />
                <RadioButton
                    android:id="@+id/delivery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delivery_label" />
            </RadioGroup>
        </TableRow>
        <Button
            android:id="@+id/save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save" />
    </TableLayout>
    <ListView
        android:id="@+id/restaurants"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/details"
        android:layout_alignParentTop="true" />

</RelativeLayout>